test/errors/undefined_variable.correct
error: undefined_variable.li:1:7: variable 'undefined_variable' is not defined
│  print(undefined_variable);
│        ~~~~~~~~~~~~~~~~~~
│        ^
